@@ -12,24 +12,6 @@ from nzbToMediaEnv import *
 
 Logger = logging.getLogger()
 
-class AuthURLOpener(urllib.FancyURLopener):
-    def __init__(self, user, pw):
-        self.username = user
-        self.password = pw
-        self.numTries = 0
-        urllib.FancyURLopener.__init__(self)
-
-    def prompt_user_passwd(self, host, realm):
-        if self.numTries == 0:
-            self.numTries = 1
-            return (self.username, self.password)
-        else:
-            return ('', '')
-
-    def openit(self, url):
-        self.numTries = 0
-        return urllib.FancyURLopener.open(self, url)
-
 def process(dirName, nzbName=None, status=0):
 
     status = int(status)
@@ -45,8 +27,6 @@ def process(dirName, nzbName=None, status=0):
 
     host = config.get("HeadPhones", "host")
     port = config.get("HeadPhones", "port")
-    username = config.get("HeadPhones", "username")
-    password = config.get("HeadPhones", "password")
     apikey = config.get("HeadPhones", "apikey")
     delay = float(config.get("HeadPhones", "delay"))
 
@@ -59,8 +39,6 @@ def process(dirName, nzbName=None, status=0):
         web_root = config.get("HeadPhones", "web_root")
     except ConfigParser.NoOptionError:
         web_root = ""
-
-    myOpener = AuthURLOpener(username, password)
 
     if ssl:
         protocol = "https://"
@@ -84,7 +62,7 @@ def process(dirName, nzbName=None, status=0):
         Logger.debug("Opening URL: %s", url)
 
         try:
-            urlObj = myOpener.openit(url)
+            urlObj = urllib.urlopen(url)
         except:
             Logger.exception("Unable to open URL")
             return 1 # failure
